--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -31,20 +31,20 @@
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
     <!-- Lineage version -->
-    <Preference
+    <!-- <Preference
         android:key="lineage_version"
         android:title="@*lineageos.platform:string/lineage_version"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/> -->
 
     <!-- Lineage API version -->
-    <Preference
+    <!-- <Preference
         android:key="lineage_api_version"
         android:title="@*lineageos.platform:string/lineage_api_level"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageApiVersionPreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageApiVersionPreferenceController"/> -->
 
     <!-- Security patch -->
     <Preference
@@ -54,11 +54,11 @@
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
     <!-- Vendor security patch -->
-    <Preference
+    <!-- <Preference
         android:key="vendor_security_key"
         android:title="@*lineageos.platform:string/lineage_vendor_security_patch"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVendorSecurityPatchLevelPreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVendorSecurityPatchLevelPreferenceController"/> -->
 
     <!-- Mainline module version -->
     <Preference
